--- a/_includes/external.html
+++ b/_includes/external.html
@@ -5,6 +5,8 @@
 
 <script type="text/javascript" src="/js/main.js"></script>
 
+<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1260362947'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1260362947%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));</script>
+
 {% if site.ga.id %}
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
