添加格式化代码文章

--- a/_includes/support.html
+++ b/_includes/support.html
@@ -1,7 +1,7 @@
 <section class="read-more">
    <div class="read-more-item">
        <span class="read-more-item-dim">用支付宝请我喝咖啡</span>
-       <p class="excerpt"><img src="/assets/images/wechat.png"></p>
+       <p class="excerpt"><img src="/assets/images/alipay.png"></p>
    </div>
    
    <div class="read-more-item">
