--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,7 @@ layout: default
 
   <section class="post">
     {{ content }}
+    <iframe src="//player.bilibili.com/player.html?{{page.video}}" width="780" height="480" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
   </section>
 </article>
 
