--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,8 +12,9 @@ layout: default
 
   <section class="post">
     {{ content }}
-    <iframe src="//player.bilibili.com/player.html?{{page.video}}" width="780" height="480" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
   </section>
+
+  <iframe src="//player.bilibili.com/player.html?aid={{page.aid}}&cid={{page.cid}}&page=1" width="780" height="480" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 </article>
 
 {% include support.html %}
