--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
     {{ content }}
   </section>
 
-  <iframe src="//player.bilibili.com/player.html?aid={{page.aid}}&cid={{page.cid}}&page=1" width="780" height="480" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+  <iframe src="//player.bilibili.com/player.html?{{page.video}}" width="780" height="480" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 </article>
 
 {% include support.html %}
