--- a/_layouts/video.html
+++ b/_layouts/video.html
@@ -11,8 +11,9 @@ layout: default
   </header>
 
   <section class="post">
-    {{ content }}
+    <iframe src="//player.bilibili.com/player.html?{{page.video}}" width="780" height="480" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
   </section>
+
 </article>
 
 {% include support.html %}
